%%{init: {"theme": "base", "themeVariables": {"fontSize": "13px"}} }%%
erDiagram
    Users ||--o| PortalCredentials : has
    Users ||--o{ Sessions : has

    Users {
        uuid id PK
        text email UK
        text passwordHash
        text name
        text universityId UK
        numeric gpa
        timestamptz gpaUpdatedAt
        timestamptz lastActiveAt
        timestamptz createdAt
        timestamptz updatedAt
    }

    PortalCredentials {
        uuid id PK
        uuid userId FK
        text encryptedUsername
        text encryptedPassword
        timestamptz createdAt
        timestamptz updatedAt
    }

    Sessions {
        uuid id PK
        uuid userId FK
        text cookies
        timestamptz expiresAt
        timestamptz createdAt
    }

    Admins {
        text universityId PK
        timestamptz createdAt
    }
